force-app/main/default/objects/Program_Registration__c/Program_Registration__c.object-meta.xml
<CustomObject>
    <description>Junction object connecting Programs with Contacts</description>
    <label>Program Registration</label>
    <nameField>
        <displayFormat>Registration-{0000}</displayFormat>
        <label>Registration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>