force-app/main/default/objects/Program_Registration__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <description>Last and first names of Contact signed up for the Program.</description>
    <formula>Contact__r.LastName + &#39;, &#39; +  Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>