force-app/main/default/objects/Program_Registration__c/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use the Inactivate Registrations tab on the program to inactivate bulk contacts.  Or inactivate individual contacts by checking this checkbox.  Or delete registration records to permanently remove a registered contact from the Manage Attendance tab.
Note:  This box is checked via when a participant is inactivated by the ManageRegistrations Lightning component (using the Inactivate Registrations tab on the program). It is automatically unchecked if a Program Attendance record is subsequently created for the participant.  Inactive registrations still appear on the Manage Attendance tab on sessions, but at the end of the list.
Note:  Inactivating or deleting registrations does NOT affect attendance records.  
Note:  Registration records link contacts with sessions to produce the list on the Manage Attendance tab on sessions (to facilitate bulk attendance data entry).</description>
    <inlineHelpText>Use the Inactivate Registrations tab on program to inactivate registrations in bulk.  Or inactivate individually by checking this checkbox.  Or delete registration records to permanently remove a registered contact from the Manage Attendance tab.</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>