force-app/main/default/objects/Program_Registration__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>For display of active/inactive status on attendance pages and lists.</description>
    <formula>IF( Inactive__c, &quot;Not active&quot;, &quot;Active&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>